--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   },
   "devDependencies": {
     "@vuepress/client": "2.0.0-beta.66",
+    "@vuepress/plugin-register-components": "2.0.0-beta.67",
+    "@vuepress/utils": "2.0.0-beta.66",
     "vue": "^3.3.4",
     "vuepress": "2.0.0-beta.66",
     "vuepress-plugin-search-pro": "2.0.0-beta.235",
