✨ feat(笔记): 更新ES笔记保证准备性

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "update-package": "pnpm dlx vp-update"
   },
   "devDependencies": {
+    "@types/node": "^22.9.3",
     "@vuepress/client": "2.0.0-beta.66",
     "@vuepress/plugin-register-components": "2.0.0-beta.66",
     "@vuepress/utils": "2.0.0-beta.66",
