--- a/package.json
+++ b/package.json
@@ -12,15 +12,16 @@
     "update-package": "pnpm dlx vp-update"
   },
   "devDependencies": {
-    "@types/node": "^22.10.5",
-    "@vuepress/plugin-register-components": "2.0.0-rc.66",
-    "vue": "^3.5.13",
-    "vuepress": "2.0.0-rc.19",
-    "vuepress-theme-hope": "2.0.0-rc.67"
+    "@types/node": "^22.9.3",
+    "@vuepress/client": "2.0.0-beta.66",
+    "@vuepress/plugin-register-components": "2.0.0-beta.66",
+    "@vuepress/utils": "2.0.0-beta.66",
+    "vue": "^3.3.4",
+    "vuepress": "2.0.0-beta.66",
+    "vuepress-plugin-search-pro": "2.0.0-beta.235",
+    "vuepress-theme-hope": "2.0.0-beta.235"
   },
   "dependencies": {
-    "@vuepress/bundler-vite": "2.0.0-rc.7",
-    "rimraf": "^5.0.10",
-    "vuepress-plugin-search-pro": "2.0.0-rc.59"
+    "rimraf": "^5.0.5"
   }
 }
