--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@vuepress/client": "2.0.0-beta.66",
     "@vuepress/plugin-register-components": "2.0.0-beta.66",
     "@vuepress/utils": "2.0.0-beta.66",
+    "busuanzi.pure.js": "^1.0.3",
+    "canvas-confetti": "^1.9.3",
     "vue": "^3.3.4",
     "vuepress": "2.0.0-beta.66",
     "vuepress-plugin-search-pro": "2.0.0-beta.235",
