--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "vuepress-theme-hope": "2.0.0-beta.235"
   },
   "dependencies": {
-    "rimraf": "^5.0.5"
+    "rimraf": "^5.0.5",
+    "vue-router": "^4.5.0"
   }
 }
