修复部署的错误

--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -41,11 +41,13 @@ jobs:
         run: pnpm run build
 
       - name: Deploy
-        uses: cross-the-world/scp-pipeline@master
+        uses: appleboy/scp-action@v0.1.3
         with:
           host: ${{ secrets.USER_HOST }}
-          user: ${{ secrets.USER_NAME }}
-          pass: ${{ secrets.USER_PASS }}
-          connect_timeout: 120s
-          local: './src/.vuepress/dist/*'
-          remote: /var/www/html
+          username: ${{ secrets.USER_NAME }}
+          password: ${{ secrets.USER_PASS }}
+          port: 22
+          timeout: 120
+          source: "./src/.vuepress/dist/*"
+          target: "/var/www/html"
+          overwrite: true
