工作流修复 添加超时单位

--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -47,7 +47,7 @@ jobs:
           username: ${{ secrets.USER_NAME }}
           password: ${{ secrets.USER_PASS }}
           port: 22
-          timeout: 120
+          timeout: 120s
           source: "./src/.vuepress/dist/*"
           target: "/var/www/html"
           overwrite: true
