--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -48,6 +48,7 @@ jobs:
           password: ${{ secrets.USER_PASS }}
           port: 22
           timeout: 120s
+          strip_components: true
           source: "./src/.vuepress/dist/**"
           target: "/var/www/html"
           overwrite: true
